Add optimized devcontainer and Gitpod configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,53 @@
 {
-  "name": "Omnisum Dev Container",
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
+  "name": "OmniSummarize Dev Environment",
+  "image": "mcr.microsoft.com/devcontainers/javascript-node:latest",
+
   "features": {
-    "ghcr.io/devcontainers/features/git:1": {},
-    "ghcr.io/devcontainers/features/node:1": {}
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "lts"
+    },
+    "ghcr.io/devcontainers/features/pnpm:1": {},
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   },
+
   "customizations": {
     "vscode": {
       "extensions": [
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
-        "ms-vscode.vscode-typescript-next"
+        "formulahendry.auto-close-tag",
+        "formulahendry.auto-rename-tag",
+        "ms-azuretools.vscode-docker",
+        "eamodio.gitlens",
+        "github.vscode-pull-request-github",
+        "gruntfuggly.todo-tree"
       ],
       "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash",
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "prettier.singleQuote": true,
+        "eslint.alwaysShowStatus": true,
+        "editor.tabSize": 2
       }
     }
   },
-  "postCreateCommand": "npm install",
-  "remoteUser": "node"
+
+  "forwardPorts": [3000, 5173, 8080],
+  "portsAttributes": {
+    "3000": {
+      "label": "Node App",
+      "onAutoForward": "notify"
+    },
+    "5173": {
+      "label": "Vite Dev",
+      "onAutoForward": "openPreview"
+    },
+    "8080": {
+      "label": "API or Frontend",
+      "onAutoForward": "openBrowser"
+    }
+  },
+
+  "postCreateCommand": "pnpm install",
+  "remoteUser": "vscode"
 }
